# CourseWork5

./: .env_sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
config/: settings.py  urls.py
nginx/: nginx.conf
telegram_bot/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
telegram_bot/migrations/: 0001_initial.py  0002_initial.py  0003_rename_pleasant_habit_pleasanthabit.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options_customuser_telegram_chat_id.py  0003_remove_customuser_username.py  0004_customuser_username.py  0005_remove_customuser_username.py  0006_customuser_username.py  0007_alter_customuser_username.py
